# feodorH_for_linux

./: Dockerfile  Main file  Makefile  Makefile.am  configure.ac  kubsh.deb  main.cpp  shell
.github/workflows/: ci.yml  release.yml
